--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>My Portfolio</title>
+        <title>Portfolio</title>
         <script src="scripts.js"></script>
         <link rel="stylesheet" href="styles.css" />
     </head>
@@ -10,13 +10,13 @@
 
         <h2>About Me</h2>
 
-        <p>Information about me.</p>
+        <p>Freshman at Tufts School of Engineering. Anticipated Major in Mechanical Engineering. Curently working on fabricting a L1 Rocket for certification by NAR</p>
 
         <h2>Project List</h2>
 
         <p>
             <ul>
-                <li><a href="project0.html">Project 0: Project Name</a></li>
+                <li><a href="project0.html">Project 1: L1 Rocket</a></li>
             </ul>
         </p>
 
