--- a/project0.html
+++ b/project0.html
@@ -6,11 +6,11 @@
     </head>
     <body>
 
-        <h1>Project 0</h1>
+        <h1>Project 1</h1>
 
         <h2>About</h2>
 
-        <p>Paragraph describing Project 0...</p>
+        <p>I am currently fabricating a L1 rocket using university makerspace as part of the Rocketry Team. I first modeled both a fin assembly and a nose cone using </p>
 
         <h2>Pictures</h2>
 
@@ -19,7 +19,7 @@
         <h2>Videos</h2>
 
         <!-- Go to YouTube, find video, select "Share" and copy Embed code here -->
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/DLzxrzFCyOs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <!-- iframe width="560" height="315" src="https://www.youtube.com/embed/DLzxrzFCyOs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <h2>Code</h2>
 
