--- a/project0.html
+++ b/project0.html
@@ -10,7 +10,7 @@
 
         <h2>About</h2>
 
-        <p>I am currently fabricating a L1 rocket using university makerspace as part of the Rocketry Team. I first modeled both a fin assembly and a nose cone using </p>
+        <p>I am currently fabricating a L1 rocket using university makerspace as part of the Rocketry Team. I first modeled both a fin assembly and a nose cone using Onshape. Then, I laser cut the assimbly in birch wood and 3d-printed the nose cone. Currently in the prosses stress testing and optimizing both for a planned launch date in late January. </p>
 
         <h2>Pictures</h2>
 
