--- a/project0.html
+++ b/project0.html
@@ -14,7 +14,8 @@
 
         <h2>Pictures</h2>
 
-        <p><img src="./images/project0.jpg" /></p>
+        <p><img src="./images/fin_assembly_draft1.jpg" /></p>
+        <p><img src="./images/nosecone_draft1.jpg" /></p>
 
         <h2>Videos</h2>
 
