--- a/project0.html
+++ b/project0.html
@@ -14,8 +14,8 @@
 
         <h2>Pictures</h2>
 
-        <p><img src="./images/fin_assembly_draft1.jpg" /></p>
-        <p><img src="./images/nosecone_draft1.jpg" /></p>
+        <p><img src="./images/fin_assembly_draft1.jpg" width="400" height="600"/></p>
+        <p><img src="./images/nosecone_draft1.jpg" width="400" height="600"/></p>
 
         <h2>Videos</h2>
 
