--- a/project0.html
+++ b/project0.html
@@ -17,10 +17,10 @@
         <p><img src="./images/fin_assembly_draft1.jpg" width="400" height="600"/></p>
         <p><img src="./images/nosecone_draft1.jpg" width="400" height="600"/></p>
 
-        <h2>Videos</h2>
+        <!-- <h2>Videos</h2>
 
         <!-- Go to YouTube, find video, select "Share" and copy Embed code here -->
-        <!-- iframe width="560" height="315" src="https://www.youtube.com/embed/DLzxrzFCyOs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/DLzxrzFCyOs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <h2>Code</h2>
 
