--- a/project0.html
+++ b/project0.html
@@ -14,8 +14,8 @@
 
         <h2>Pictures</h2>
 
-        <p><img src="./images/fin_assembly_draft1.jpg" width="377" height="283"/></p>
-        <p><img src="./images/nosecone_draft1.jpg" width="403" height="302"/></p>
+        <p><img src="./images/fin_assembly_draft1.jpg" width="400" height="auto"/></p>
+        <p><img src="./images/nosecone_draft1.jpg" width="400" height="auto"/></p>
 
         <!-- <h2>Videos</h2>
 
