Update and rename project0.html to rocketryL1.html

--- a/rocketryL1.html
+++ b/rocketryL1.html
@@ -16,6 +16,10 @@
 
         <p><img src="./images/fin_assembly_draft1.jpg" width="400" height="auto"/></p>
         <p><img src="./images/nosecone_draft1.jpg" width="400" height="auto"/></p>
+        <p><img src="./images/nosecone_fails.jpg" width="400" height="auto"/></p>
+        <p><img src="./images/nosecone_top&bottom.jpg" width="400" height="auto"/></p>
+        <p><img src="./images/nosecone_together_draft2.jpg" width="400" height="auto"/></p>
+        
 
         <!-- <h2>Videos</h2>
 
