--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <p>
             <ul>
-                <li><a href="project0.html">Project 1: L1 Rocket</a></li>
+                <li><a href="rocketryL1.html">Project 1: L1 Rocket</a></li>
             </ul>
         </p>
 
