--- a/rocketryL1.html
+++ b/rocketryL1.html
@@ -14,11 +14,13 @@
 
         <h2>Pictures</h2>
 
-        <p><img src="./images/fin_assembly_draft1.jpg" width="400" height="auto"/></p>
-        <p><img src="./images/nosecone_draft1.jpg" width="400" height="auto"/></p>
-        <p><img src="./images/nosecone_fails.jpg" width="400" height="auto"/></p>
-        <p><img src="./images/nosecone_top&bottom.jpg" width="400" height="auto"/></p>
-        <p><img src="./images/nosecone_together_draft2.jpg" width="400" height="auto"/></p>
+        <p><img src="./images/fin_assembly_onshape_draft1.png" width="400" height="auto"/> First draft of fin assembly in Onshape</p>
+        <p><img src="./images/nosecone_onshape_draft2.png" width="400" height="auto"/> Second draft of the nosecone in Onshape</p>
+        <p><img src="./images/fin_assembly_draft1.jpg" width="400" height="auto"/> First draft of fin assembly </p>
+        <p><img src="./images/nosecone_draft1.jpg" width="400" height="auto"/> First print of the nose cone, printed in one piece</p>
+        <p><img src="./images/nosecone_fails_1.jpg" width="400" height="auto"/> Failed prints of the nosecone </p>
+        <p><img src="./images/nosecone_top&bottom.jpg" width="400" height="auto"/> Second draft of the nosecone, printed in two pieces</p>
+        <p><img src="./images/nosecone_together_draft2.jpg" width="400" height="auto"/> Second draft of the nosecone together </p> 
         
 
         <!-- <h2>Videos</h2>
