--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         
-        <h1 style="background-color:powderblue;"><i>Welcome to Bode's Portfolio<i></h1>
+        <h1 style="background-color:powderblue;">Welcome to Bode's Portfolio</h1>
 
         <h2>About Me</h2>
 
