--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         
-        <h1 style="background-color:powderblue;">Welcome to Bode's Portfolio</h1>
+        <h1 style="background-color:powderblue;"><i>Welcome to Bode's Portfolio</i></h1>
 
         <h2>About Me</h2>
 
@@ -16,7 +16,9 @@
 
         <p>
             <ul>
-                <li><a href="rocketryL1.html">Project 1: L1 Rocket</a></li>
+                <li><a href="rocketryL1.html">L1 Rocket</a></li>
+                <!-- <li><a href="battlebot.html">Battlebot</a></li> 
+                <li><a href="senior_research.html">Senior Research Project</a></li> /!--> 
             </ul>
         </p>
 
