--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
 
         <h2>About Me</h2>
 
-        <p>Freshman at Tufts School of Engineering. Anticipated Major in Mechanical Engineering. Curently working on fabricting a L1 Rocket for certification by NAR</p>
+        <p>Freshman at Tufts School of Engineering. Anticipated Major in Mechanical Engineering. Curently working on fabricting a L1 Rocket for certification by NAR and on a Battlebot</p>
 
         <h2>Project List</h2>
 
         <p>
             <ul>
                 <li><a href="rocketryL1.html">L1 Rocket</a></li>
-                <!-- <li><a href="battlebot.html">Battlebot</a></li> 
-                <li><a href="senior_research.html">Senior Research Project</a></li> /!--> 
+                <!-- <li><a href="battlebot.html">Battlebot</a></li> -->
+                <li><a href="senior_research.html">Senior Research Project</a></li> 
             </ul>
         </p>
+    
+    <p><a href=".images/Resume_Nov__2021.pdf">My resume</p>
 
     </body>
 </html>
