--- a/senior_research.html
+++ b/senior_research.html
@@ -21,7 +21,7 @@
 
         <div><img src="./images/props.png" width="400" height="auto"/>
         <p>Propeller and gearbox setup used in testing</p>
-        <img src="./images/electronics.png" width="400" height="auto"
+        <img src="./images/electronics.png" width="400" height="auto"/>
         <p> Electronics I used for tests</p>
         </div>
         
