--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
         <h2>About Me</h2>
 
-        <p>Freshman at Tufts School of Engineering. Anticipated Major in Mechanical Engineering. Curently working on fabricting a L1 Rocket for certification by NAR and on a Battlebot</p>
+        <p style="text-align:center;">Freshman at Tufts School of Engineering. Anticipated Major in Mechanical Engineering. Curently working on fabricting a L1 Rocket for certification by NAR and on a Battlebot</p>
 
         <h2>Project List</h2>
 
-        <p>
+        <ps tyle="text-align:center;">
             <ul>
                 <li><a href="rocketryL1.html">L1 Rocket</a></li>
                 <!-- <li><a href="battlebot.html">Battlebot</a></li> -->
