--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     </head>
     <body>
         
-        <h1 style="background-color:black;"><i>Welcome to Bode's Portfolio</i></h1>
+        <div class="header">
+            Bode Wildgrube
+        </div>
+            
+        <h1 style="background-color:black;">Welcome to Bode's Portfolio</h1>
 
         <h2>About Me</h2>
 
